Images and Sorting
Final details on sorting

Images OK
