# src/app/api/services.ts
@@ -1,3 +1,2 @@
-export { FileUploadControllerService } from './services/file-upload-controller.service';
 export { ReservationControllerService } from './services/reservation-controller.service';
 export { ClientControllerService } from './services/client-controller.service';
