# src/openapi.json
@@ -11,41 +11,6 @@
         }
     ],
     "paths": {
-        "/api/upload/file": {
-            "post": {
-                "tags": [
-                    "file-upload-controller"
-                ],
-                "operationId": "uploadFile",
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "type": "object",
-                                "properties": {
-                                    "file": {
-                                        "type": "string",
-                                        "format": "binary"
-                                    }
-                                }
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "type": "string"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
         "/api/reservations": {
             "get": {
                 "tags": [
@@ -607,6 +572,9 @@
                     "ranking": {
                         "type": "integer",
                         "format": "int32"
+                    },
+                    "image": {
+                        "type": "string"
                     }
                 }
             },
@@ -631,13 +599,6 @@
                     },
                     "description": {
                         "type": "string"
-                    },
-                    "reservations": {
-                        "uniqueItems": true,
-                        "type": "array",
-                        "items": {
-                            "$ref": "#/components/schemas/ReservationEntity"
-                        }
                     }
                 }
             },
@@ -660,6 +621,9 @@
                     "ranking": {
                         "type": "integer",
                         "format": "int32"
+                    },
+                    "image": {
+                        "type": "string"
                     },
                     "client": {
                         "$ref": "#/components/schemas/ClientEntity"
